--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/Gonzalo/Desktop/MySQL/mysql-connector-java-5.1.47/mysql-connector-java-5.1.47-bin.jar">
+	<classpathentry kind="lib" path="E:/Descargas/Ejemplos/AppWeb_ProgCapas_Paginacion/mysql-connector-java-5.1.42-bin.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
